--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		
 		<script src="js/jquery-1.10.1.min.js"></script>
 		<link rel="stylesheet" href="css/style.css" />
+        <icon src="images/star.png" gap:platform="android" gap:density="hdpi" />
 		
 	</head>
     <body>
